2005-11-15  Werner Koch  <wk@g10code.com>

	* src/inst-gpgee.nsi: Use RegDLL and UnRegDLL.  Print warning on
	registration failure.  Use move approach for active extension.

	* src/installer.nsi: Moved inclusion of g4wihelp.nsi after the
	language definitions.

	* configure.ac (VERSION): Generate extended version information.
	* include/config.nsi.in: Define replacements
	* src/gpg4win.nsi, src/gpg4win-src.nsi: Use them for PROD_VERSION.

	* src/gpg4win-src.nsi: Add our build dir as plugindir.

2005-11-14  Werner Koch  <wk@g10code.com>

	* src/inst-sections.nsi (.onInit): Make sure that only one
	instance of the installer may run at the same time.
	* src/installer.nsi: Include g4wihelp.nsi.
	* src/g4wihelp.nsi: New.
	* src/g4wihelp.c: New.
	* src/exdll.h: New.

2005-11-11  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpg4win.mk.in (stamps/stamp-$(1)-00-install): Don't strip.
	(stamps/stamp-$(1)-01-install-dev): Likewise.

2005-11-08  Werner Koch  <wk@g10code.com>

	* src/gpg4win.mk.in: Also strip DLLs; I am using stripped DLLs for
	months now.

	Released 0.0.2.

	* src/installer.nsi (T_WelcomeTitle): New.
	(MUI_WELCOMEPAGE_TITLE): New.
	(MUI_FINISHPAGE): Enhanced.

	* src/installer-finish.nsi (Uninstall): use a loop to delete the
	startmenu.  Fixed Registry cleaning.

	* src/inst-sections.nsi (onInit): Make sure that only one
	installer is running.

2005-11-07  Werner Koch  <wk@g10code.com>

	* src/installer-finish.nsi: Fixed dereferencing of variable.

	* src/inst-sections.nsi, src/installer-finish.nsi: Ensure that the
	menu gets written for all users.

	* packages/download.sh: Add dummy manual pages.

	* src/installer.nsi: Move compression type to ...
	* src/gpg4win.nsi: .. here and ...
	* src/gpg4win-src.nsi: .. here.  Use zlib for sources.
	
	* src/gpg4win-splash.bmp: New.
	* src/gpg4win-splash.wav: New.
	* src/installer.nsi: Reserve these files
	* src/inst-sections.nsi: Show silly splash screen.
	
	* include/config.nsi.in: Add dummy packages for the manuals.